// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccordionPanel initial 1`] = `
<dd
  className={null}
  id="panel-1"
>
  Panel 1
</dd>
`;

exports[`AccordionPanel is expanded 1`] = `
<dd
  aria-labelledby="header-1"
  className="accordion__panel is-expanded"
  id="panel-1"
  role="region"
>
  Panel 1
</dd>
`;
